# agent_factory

./: CHANGELOG.md  CLAUDE.md  README.md  commit_commands.sh  profile_agent.py  profile_agent_dev_token.py  profile_agent_idp.py  pyproject.toml  requirements.txt  test_client.py
agent-template/: .env.example  Authentication_Implementation_Plan.md  Authentication_forwarding_plan.md  IMPLEMENTATION_STRATEGY.md  README.md  dual_auth_test_client.py  oauth_test_client.py  requirements.txt  test_multiagent.sh
agent-template/config/: agent_config.yaml  mcp_toolsets.yaml  remote_agents.yaml  tool_registry.yaml
agent-template/docs/: ADK_A2A_NativeVsCustom_Aanalysis.md  BERARER_TOKEN_EXTRACTION.md  README_AGENTA2A.md  README_AUTH.md  README_CONFIG.md  SECURITY_PRODUCTION.md  TOKEN_HANDLING.md  WEBAPP_INTEGRATION.md  complete_testing_guide.md  quick_test_guide.md  tool_registry_guide.md
agent-template/oldtesting.deprecated/: bearer_token_test_client.py  bearer_token_test_results.json  setup_bearer_token_test.sh  test_remote_agent.py
agent-template/src/: agent.py
agent-template/testing/: test_auth_forwarding.py  test_root_agent.py
agents/authenticated-flow-agent/: GETTING_STARTED.md  README.md  quick_test.py  (+3 more)
docs/: multi_agent_setup.md  troubleshooting.md
example-mcp-server/: README.md  mcp_server.py  requirements.txt  server.py
examples/: standalone_setup.md
remote-agent-sample/: .env.example  README.md  README_SETUP.md  requirements.txt
simplified-template/: .env.example  README.md  requirements.txt
src/: deploy_agent.py  run_agent.py
testing/: README.md
(+105 files in other folders)
